--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <header>
+            <link rel="stylesheet" href="style.css"/>
             <a href="">Главная</a>
             <a href="">Контакты</a>
             <a href="">О нас</a>
